# 0.00.30 (44840) Oct 7, 2010
10/7/10 development version to share with KSU
# 0.00.29 (44839) Oct 7, 2010
10/7/10 absorb color strategy into BoxNode, delete IBoxColorStrategy
10/7/10 delete unused box coloring strategies, since we seem to have settled on this
10/7/10 order dielectrics in combo box by increasing dielectric constant
10/7/10 increase max spacing between positive and negative charges in dielectric charge pairs
10/7/10 increase spacing between dielectric charge pairs so that we have 3 rows when plate separation is 10mm
10/7/10 fix BatteryCapacitorCircuit.getMaxDielectricEField, it wasn't the max, and this was affecting dielectric "all charges" view
10/7/10 don't change the transparency of transparent dielectrics when field view (etc) is selected
10/7/10 change dielectric colors, per Noah P
10/7/10 change box color strategy to preserve alpha channel
10/7/10 replace polystyrene with glass
# 0.00.28 (44772) Oct 6, 2010
10/6/10 document model symbols used in design doc
10/6/10 change dielectric "Show All Charges" to be proportional to E_dielectric
10/6/10 clean up encapsulation of pitch and yaw properties for 3D mvt
10/6/10 move dielectric colors to CLPaints
10/6/10 move dielectric constants to CLConstants
10/6/10 use bold font for Plate Charge control title, to be consistent with bar meters
10/6/10 cleanup and doc grid-based views (plate charge, field lines, dielectric charge)
# 0.00.27 (44751) Oct 6, 2010
10/6/10 change E-field display algorithm so that lines smoothly appear/disappear at edges of plate
10/6/10 default to Dieletric tab for dev version
10/6/10 gray out Voltmeter and Electric Field Detector check boxes until they are implemented
10/5/10 add localized strings used by E-Field Detector
10/5/10 remove some dependencies on DielectricModel
10/5/10 specify default locations for meters in CLConstants
# 0.00.26 (44729) Oct 5, 2010
10/5/10 remove stubs for Save/Load feature, not necessary per Noah P
10/5/10 start up with Introduction tab selected