@@ -138,9 +138,5 @@ public class MetersControlPanel extends PhetTitledPanel {
         // make everything left justify when put in the main control panel
         setLayout( new BorderLayout() );
         add( innerPanel, BorderLayout.WEST );
-        
-        //XXX disable unimplemented features
-        voltmeterCheckBox.setEnabled( false );
-        eFieldDetectorCheckBox.setEnabled( false );
     }
 }
